--- a/_posts/2021-03-07-setup.md
+++ b/_posts/2021-03-07-setup.md
@@ -11,12 +11,9 @@ categories: news
 
 恰逢国内主场在南京奥体的江苏队（前江苏苏宁，江苏舜天）停运，白驹过隙，物是人非，令人唏嘘。所以萌生了组织一支有共同语言且较为稳定球队的想法。虎踞龙蟠是东南大学BBS的名字，也和南京有着种种关联。我们欢迎有相同想法的在旧金山湾区工作学习生活的东南大学以及南京高校的校友加入，在条件允许时开启虎踞龙蟠FC的足球之旅，一起营造一个我们足球情怀的归属之地。
 
-你可以直接使用微信二维码（过期前）加群，或在页面底部输入微信id提交表单。
+你可以直接使用微信二维码（过期前）加群，或在表单输入微信id提交。
 
 *[Santa Clara Public Health 近期对 Recreational Adult Sports的限制放宽](https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx)*
-
-![微信群二维码]({{ "/assets/img/wechat-group-invitation.png" | relative_url }})
-
 
 <div class="row">
 <form name="join-the-team" method="POST" data-netlify="true">
@@ -33,3 +30,5 @@ categories: news
   </p>
 </form>
 </div>
+
+![微信群二维码]({{ "/assets/img/news/wechat-group-invitation.png" | relative_url }})
